--- a/static/index.html
+++ b/static/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Query Interface</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -34,33 +35,63 @@
 </head>
 
 <body>
-    <div id="premadeQueries">
-        <button onclick="executeQuery('SELECT * FROM doctor')">Select all doctors</button>
-        <button onclick="executeQuery('SELECT * FROM patient')">Select all patients</button>
-    </div>
-    <div id="insertQueryBuilder">
-        <h3>Insert query builder:</h3>
-        <input type="text" id="tableName" placeholder="Enter the name of the table" onchange="fetchTableHeaders()">
-        <table></table>
-        <button
-            onclick="executeQuery(`INSERT INTO ${document.querySelector('#tableName').value} VALUES (${Array.from(document.getElementById('insertQueryBuilder').querySelector('table').children[1].children).map(e => wrapIfNotNumeric(e.children[0].value)).join(', ')})`)">Submit</button>
-    </div>
-    <div id="deleteQueryBuilder">
-        <h3>Delete query builder:</h3>
-        <input type="text" id="deleteTableName" placeholder="Enter the name of the table">
-        <input type="text" id="deleteCondition" placeholder="Enter the condition">
-        <button
-            onclick="executeQuery(`DELETE FROM ${document.querySelector('#deleteTableName').value} WHERE ${document.querySelector('#deleteCondition').value}`)">Submit</button>
-    </div>
-    <div id="customQuery">
-        <h3>Custom query:</h3>
-        <input type="text" id="customQuery" placeholder="Custom query">
-        <button onclick="executeQuery(document.querySelector('input#customQuery').value)">Submit</button>
-    </div>
+    <div class="container">
+        <!-- Premade Queries Section -->
+        <div class="card">
+            <div class="card-header">Premade Queries</div>
+            <div class="card-body">
+                <button class="btn btn-primary mr-2" onclick="executeQuery('SELECT * FROM doctor')">Select all doctors</button>
+                <button class="btn btn-primary" onclick="executeQuery('SELECT * FROM patient')">Select all patients</button>
+            </div>
+        </div>
 
-    <h2>Query Result:</h2>
-    <textarea id="result" rows="10" cols="90" readonly></textarea>
+        <!-- Insert Query Builder Section -->
+        <div class="card">
+            <div class="card-header">Insert Query Builder</div>
+            <div class="card-body">
+                <div class="form-group">
+                    <input type="text" id="tableName" class="form-control" placeholder="Enter the name of the table" onchange="fetchTableHeaders()">
+                </div>
+                <table class="table table-bordered"></table>
+                <button class="btn btn-success"
+                        onclick="executeQuery(`INSERT INTO ${document.querySelector('#tableName').value} VALUES (${Array.from(document.getElementById('insertQueryBuilder').querySelector('table').children[1].children).map(e => wrapIfNotNumeric(e.children[0].value)).join(', ')})`)">Submit</button>
+            </div>
+        </div>
 
+        <!-- Delete Query Builder Section -->
+        <div class="card">
+            <div class="card-header">Delete Query Builder</div>
+            <div class="card-body">
+                <div class="form-group">
+                    <input type="text" id="deleteTableName" class="form-control" placeholder="Enter the name of the table">
+                </div>
+                <div class="form-group">
+                    <input type="text" id="deleteCondition" class="form-control" placeholder="Enter the condition">
+                </div>
+                <button class="btn btn-danger"
+                        onclick="executeQuery(`DELETE FROM ${document.querySelector('#deleteTableName').value} WHERE ${document.querySelector('#deleteCondition').value}`)">Submit</button>
+            </div>
+        </div>
+
+        <!-- Custom Query Section -->
+        <div class="card">
+            <div class="card-header">Custom Query</div>
+            <div class="card-body">
+                <div class="form-group">
+                    <input type="text" id="customQuery" class="form-control" placeholder="Enter your custom query">
+                </div>
+                <button class="btn btn-info" onclick="executeQuery(document.querySelector('input#customQuery').value)">Submit</button>
+            </div>
+        </div>
+
+        <!-- Query Result Section -->
+        <div class="card">
+            <div class="card-header">Query Result</div>
+            <div class="card-body">
+                <textarea id="result" class="form-control" readonly></textarea>
+            </div>
+        </div>
+    </div>
     <script>
         document.getElementById('queryForm').addEventListener('submit', function (e) {
             e.preventDefault();
